// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StarShip /> should render the starship 1`] = `
.c0 {
  background: rgba(41,41,46,0.9);
  border-color: rgb(41,41,46);
  max-width: 380px;
  width: 100%;
  height: 100px;
  padding: 16px;
  margin-bottom: 8px;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.c0:hover {
  background: rgb(38,38,43);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  width: 32px;
  height: auto;
  margin-right: 8px;
}

.c3 {
  color: #fff;
  font-weight: bold;
  font-size: 1.6rem;
  text-transform: uppercase;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  color: #fff;
  font-size: 2rem;
}

.c5 {
  width: 48px;
  height: auto;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <img
      alt="Rocket Ship"
      class="c2"
      loading="lazy"
      src="/img/rocket.png"
    />
    <strong
      class="c3"
    >
      Millennium Falcon
    </strong>
  </div>
  <div
    class="c4"
  >
    <img
      alt="Stop Soard"
      class="c5"
      loading="lazy"
      src="/img/stop.png"
    />
    <span
      class="c6"
    >
      9
    </span>
  </div>
</div>
`

exports[
  `<StarShip /> should render the startship width consumables UNKNOW 1`
] = `
.c0 {
  background: rgba(41,41,46,0.9);
  border-color: rgb(41,41,46);
  max-width: 380px;
  width: 100%;
  height: 100px;
  padding: 16px;
  margin-bottom: 8px;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.c0:hover {
  background: rgb(38,38,43);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  width: 32px;
  height: auto;
  margin-right: 8px;
}

.c3 {
  color: #fff;
  font-weight: bold;
  font-size: 1.6rem;
  text-transform: uppercase;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  color: #fff;
  font-size: 2rem;
}

.c5 {
  width: 48px;
  height: auto;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <img
      alt="Rocket Ship"
      class="c2"
      loading="lazy"
      src="/img/rocket.png"
    />
    <strong
      class="c3"
    >
      Millennium Falcon
    </strong>
  </div>
  <div
    class="c4"
  >
    <img
      alt="Stop Soard"
      class="c5"
      loading="lazy"
      src="/img/stop.png"
    />
    <span
      class="c6"
    >
      *****
    </span>
  </div>
</div>
`

exports[`<StarShip /> should render the startship widthout distance prop 1`] = `
.c0 {
  background: rgba(41,41,46,0.9);
  border-color: rgb(41,41,46);
  max-width: 380px;
  width: 100%;
  height: 100px;
  padding: 16px;
  margin-bottom: 8px;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
}

.c0:hover {
  background: rgb(38,38,43);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  width: 32px;
  height: auto;
  margin-right: 8px;
}

.c3 {
  color: #fff;
  font-weight: bold;
  font-size: 1.6rem;
  text-transform: uppercase;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  color: #fff;
  font-size: 2rem;
}

.c5 {
  width: 48px;
  height: auto;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <img
      alt="Rocket Ship"
      class="c2"
      loading="lazy"
      src="/img/rocket.png"
    />
    <strong
      class="c3"
    >
      Millennium Falcon
    </strong>
  </div>
  <div
    class="c4"
  >
    <img
      alt="Stop Soard"
      class="c5"
      loading="lazy"
      src="/img/stop.png"
    />
    <span
      class="c6"
    >
      *****
    </span>
  </div>
</div>
`
